--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <title>React App</title>
+  
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+</style>
 </head>
 
 <body>
