--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><title>React App</title><script defer="defer" src="/ReactJS_JFLIX/static/js/main.fcbadd64.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><title>J-FLIX</title><style>@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap);</style><script defer="defer" src="/ReactJS_JFLIX/static/js/main.a6ac9369.js"></script></head><body><div id="root"></div></body></html>
